--- a/public/assets/scss/theme/_variables.scss
+++ b/public/assets/scss/theme/_variables.scss
@@ -1,6 +1,7 @@
 :root{
-    --theme-color1: 239, 63, 62; //#ef3f3e
-    --theme-color2: 0, 162, 247; //#00a2f7
+    // --theme-color1: 239, 63, 62; //#ef3f3e;
+    --theme-color2: 0, 162, 247; //#00a2f7;
+    --theme-color1: 174, 146, 106; //#ae926a;
 }
 //fonts
 $font_0: Nunito;
