--- a/src/components/hotels/single-pages/common/sidebar/lbky-booking/booking.css
+++ b/src/components/hotels/single-pages/common/sidebar/lbky-booking/booking.css
@@ -28,11 +28,127 @@
     border-radius: 0.5rem;
     border: none;
     padding: .3rem 0;
-    color: rgba(51, 65, 85, 1);
+    color: #757786;
+    font-weight: 600;
+font-size: 12px;
     transition: all .15s ease-in-out;
 }
 
 .radio-inputs .radio input:checked+.name {
-    background-color: #fff;
-    font-weight: 600;
+    background-color: #ae926a;
+    font-weight: 800;
+    color: white;
+    opacity: 1;
+    animation: radioFadeIn 0.5s ease-in-out;
 }
+@keyframes radioFadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+
+.ReactFlagsSelect-module_selectBtn__19wW7{
+    padding: 2px 10px !important;
+}
+.ReactFlagsSelect-module_selectValue__152eS{
+    font-size: small !important;
+    color: #757786 !important;
+}
+
+.react-tel-input .country-list{
+    width: 220px!important;
+    max-height: 100px !important;
+    z-index: 10 !important;
+    border-radius: 6px !important;
+    background-color: #eee !important;
+    color: #757786 !important;
+}
+
+.ReactFlagsSelect-module_selectOptions__3LNBJ{
+    padding: 0 !important;
+    max-height: 120px !important;
+    z-index: 10 !important;
+    border-radius: 6px !important;
+    background-color: #eee !important;
+}
+.ReactFlagsSelect-module_label__27pw9, .ReactFlagsSelect-module_secondaryLabel__37t1D{
+    color: black !important;
+    font-weight: 700 !important;
+    font-size: 14px !important;
+}
+
+.react-tel-input .country-list .country-name {
+    color: #757786 !important;
+    font-weight: 700 !important;
+}
+
+
+
+.payment-checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 14px;
+    height: 14px;
+    border: 2px solid #ae926a;
+    border-radius: 50%;
+    outline: none;
+    /* transition: background 0.3s; */
+  }
+  
+  .payment-checkbox:checked {
+    background-color: #ae926a;
+  }
+  
+  .payment-checkbox:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10px; /* Adjust as needed for size */
+    height: 10px; /* Adjust as needed for size */
+    background-color: #fff;
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .payment-checkbox:checked:before {
+    opacity: 1;
+  }
+  
+
+
+  .lbyk-hotel-name-label{
+    position: absolute;
+    background-color: rgba(var(--theme-color1),1);
+    color: #fff;
+    font-size: calc(12px + 2*(100vw - 320px)/1600);
+    text-transform: capitalize;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    /* left: -10px; */
+    z-index: 10;
+    padding: 2px 10px;
+    font-weight: 800;
+    /* width:fit-content ; */
+    width: 80%;
+  }
+
+  /* .lbyk-hotel-name-label::after{
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-top: 15px solid  rgba(var(--theme-color1),1);
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -15px;
+
+  } */
