--- a/src/components/hotels/single-pages/common/sidebar/lbky-booking/booking.css
+++ b/src/components/hotels/single-pages/common/sidebar/lbky-booking/booking.css
@@ -129,19 +129,19 @@ font-size: 12px;
     background-color: rgba(var(--theme-color1),1);
     color: #fff;
     font-size: calc(12px + 2*(100vw - 320px)/1600);
-    text-transform: capitalize;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    /* left: -10px; */
-    z-index: 10;
     padding: 2px 10px;
+    text-transform: capitalize;
     font-weight: 800;
-    /* width:fit-content ; */
-    width: 80%;
+    z-index: 10;
+    top: 10px;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    /* width: 80%; */
+    left: -10px;
+    width:fit-content ;
   }
 
-  /* .lbyk-hotel-name-label::after{
+  .lbyk-hotel-name-label::after{
     width: 0;
     height: 0;
     border-left: 10px solid transparent;
@@ -151,4 +151,4 @@ font-size: 12px;
     left: 0;
     bottom: -15px;
 
-  } */
+  }
